unpackaged/main/default/objects/Forterro_PSA_EVA__c/Forterro_PSA_EVA__c.object-meta.xml
<CustomObject>
    <description>A custom object to be used by Snapshot Report in order to capture monthly EVA records from PSA for Estimated vs Actual comparison for a given Time Period.</description>
    <label>Forterro PSA EVA</label>
    <nameField>
        <label>Forterro PSA EVA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forterro PSA EVAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>