unpackaged/main/default/objects/Forterro_PSA_EVA__c/fields/CPS_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>CPS_Actual_Hours__c</fullName>
    <description>Refer to the 'Estimates Vs Actual's object for field definitions.</description>
    <label>Actual Hours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>