unpackaged/main/default/objects/Forterro_PSA_EVA__c/fields/CPS_Assignment_Name__c.field-meta.xml
<CustomField>
    <fullName>CPS_Assignment_Name__c</fullName>
    <description>Refer to the 'Estimates Vs Actual's object for field definitions.</description>
    <label>Assignment Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>