unpackaged/main/default/objects/Forterro_PSA_EVA__c/fields/CPS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CPS_End_Date__c</fullName>
    <description>Refer to the 'Estimates Vs Actual's object for field definitions.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>