unpackaged/main/default/objects/Forterro_PSA_EVA__c/fields/CPS_EVA_ID__c.field-meta.xml
<CustomField>
    <fullName>CPS_EVA_ID__c</fullName>
    <description>Refer to the 'Estimates Vs Actual's object for field definitions.</description>
    <label>EVA ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>