unpackaged/main/default/objects/Forterro_PSA_EVA__c/fields/CPS_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>CPS_Resource_Name__c</fullName>
    <description>Refer to the 'Estimates Vs Actual's object for field definitions.</description>
    <label>Resource Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>