unpackaged/main/default/objects/Forterro_PSA_EVA__c/fields/MyGroup__c.field-meta.xml
<CustomField>
    <fullName>MyGroup__c</fullName>
    <formula>CONTAINS( Group_ID_Chain__c ,  $User.PSA_Group_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MyGroup</label>
    <type>Checkbox</type>
</CustomField>