unpackaged/main/default/objects/Forterro_PSA_EVA__c/fields/MyRegion__c.field-meta.xml
<CustomField>
    <fullName>MyRegion__c</fullName>
    <formula>CONTAINS(Region_ID_Chain__c , $User.PSA_Region_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MyRegion</label>
    <type>Checkbox</type>
</CustomField>