unpackaged/main/default/objects/Forterro_PSA_EVA__c/fields/Region_ID_Chain__c.field-meta.xml
<CustomField>
    <fullName>Region_ID_Chain__c</fullName>
    <label>Region ID Chain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>